# twittra

./: .env  .gitignore  AGENTS.md  Caddyfile  Cargo.toml  Dockerfile  README.md  compose.test.yaml  compose.yaml  deno.json  deno.jsonc  flake.nix  frontend.Dockerfile  index.html  main.tsx  openapi.json  orval.config.ts  vite.config.ts  vitest.config.ts
.github/workflows/: ci.yaml  release.yaml
.sqlx/: query-07a41dafd5ec30b737e86ddd37124837ceec9d6a847692dcd8dd36128367d1db.json  query-19f66412dd0ad3966eb784f044fbdf9be098635e94f50ee746afaa2504216a85.json  query-1a130da8843d54100534026d3e1b4975a28a8a02acea33828c5d62261aa0972d.json  query-204349528682c4c456513e91c2a2905e0312275ab10099a7198f825692c98d96.json  query-3f05e80c1660da847544c229a934ae9f81713e1ae73f52cab5b63967afe56b9a.json  query-5134e2503190d3096588558eedd1a37250189cf500b837860353d3d14d23facd.json  query-5840850a9b3a2325a4008ff11a4bb8ce01830a99022bba663a48880e6de848ec.json  query-5a30988915f2105702e029eaaaf9095460ffec9e8bc3c96f5734932df83d85ed.json  query-5c2f7e52fc126dd73412d9ef6cd2e3ae7a386507154d78307fdf8414a669c578.json  query-63a014f868bd88ecfffa60a6d816636b2e7d8619967ea4b369ac0c12ca4a0023.json  query-89b1b7939176366d43a5436f6ba2777bf2cdc6ac4775037cdae57ae97c26601c.json  query-8eaccf449577dde729a2e3ad096db58f22055aa88ee7dd1d2a908fac69f3664c.json  query-9d6a88623fe0a29ccacb880a3326e8adc013244a8a8cf4bdea02ee1deb1759e8.json  query-ae5c3cf7d22036f858f1c5188c77e68827c048f31a4215e496c640573b2d5189.json  query-b694876fc74abd5e591e874038988c06da5cbf981c3994916fcc77067848a6da.json  query-b8915956a6f39787ddd4f6238be9ca154179e584000669f49bc5e69af0b10737.json  query-e3e3bdb660ef1e7a466ee1be393f55b3b359362e047dbf7980f32108b204f157.json  query-f40ab7e781b7d38413ae081c321c631aa6c74ed0766596a1553cfcc9dc1a4be7.json
api/: mocks.ts  reviver.ts  twittra.schemas.ts
api/auth/: auth.msw.ts  auth.ts
api/channel/: channel.msw.ts  channel.ts
api/message/: message.msw.ts  message.ts
api/stamp/: stamp.msw.ts  stamp.ts
api/timeline/: timeline.msw.ts  timeline.ts
api/user/: user.msw.ts  user.ts
app/: App.tsx  MockSocketProvider.tsx  SocketProvider.tsx  socketParser.ts  typedSocket.ts
app/hooks/: useReadManagement.test.tsx  useReadManagement.ts
auth/components/: AuthProvider.tsx  LoginScreen.tsx
auth/context/: user.ts
auth/hooks/: useUser.ts
components/: Layout.tsx  TraqLogo.tsx  UserAvatar.tsx
crates/app/: Cargo.toml
crates/app/src/: handler.rs  lib.rs  main.rs  mocks.rs  session.rs  socket.rs  test_factories.rs  test_helpers.rs
crates/app/src/handler/: auth.rs  channel.rs  message.rs  stamp.rs  timeline.rs  user.rs
crates/domain/: Cargo.toml
crates/domain/src/: crawler.rs  error.rs  event.rs  lib.rs  model.rs  notifier.rs  repository.rs  service.rs  test_factories.rs  traq_client.rs
crates/infra/: Cargo.toml
crates/infra/migrations/: 1_init.sql  2_add_fulltext_index.sql  2_add_last_crawled_at.sql
crates/infra/src/: lib.rs  test_utils.rs  traq_client.rs
crates/infra/src/repository/: mariadb.rs  mysql.rs
crates/infra/src/repository/mariadb/: message.rs  stamp.rs  user.rs
crates/infra/src/repository/mysql/: message.rs  user.rs
crates/infra/tests/: traq_client_integration.rs
crates/infra/tests/common/: mod.rs
crates/traq/: Cargo.toml  README.md
crates/traq/.openapi-generator/: FILES
crates/traq/docs/: ActiveOAuth2Token.md  ActivityApi.md  AddUserGroupMemberRequest.md  AuthenticationApi.md  Bot.md  BotApi.md  BotDetail.md  BotEventLog.md  BotEventResult.md  BotMode.md  BotState.md  ChannelApi.md  ChannelEvent.md  ChannelEventDetail.md  ChannelList.md  ChannelPath.md  ChannelStats.md  ChannelSubscribeLevel.md  ChannelViewState.md  ChannelViewer.md  ClipApi.md  ClippedMessage.md  FileApi.md  FileInfo.md  GetBot200Response.md  GetClient200Response.md  GetMyStampRecommendations200ResponseInner.md  GroupApi.md  MeApi.md  Message.md  MessageApi.md  MessageSearchResult.md  MyChannelViewState.md  MyUserDetail.md  NotificationApi.md  OAuth2Client.md  OAuth2ClientDetail.md  OAuth2Prompt.md  OAuth2ResponseType.md  OAuth2Scope.md  (+50 more)
crates/traq/src/apis/: activity_api.rs  authentication_api.rs  bot_api.rs  channel_api.rs  clip_api.rs  configuration.rs  file_api.rs  group_api.rs  me_api.rs  message_api.rs  mod.rs  notification_api.rs  oauth2_api.rs  ogp_api.rs  pin_api.rs  public_api.rs  qall_api.rs  stamp_api.rs  star_api.rs  user_api.rs  user_tag_api.rs  webhook_api.rs  webrtc_api.rs
crates/traq/src/models/: active_o_auth2_token.rs  activity_timeline_message.rs  add_user_group_member_request.rs  bot.rs  bot_detail.rs  bot_event_log.rs  bot_event_result.rs  bot_mode.rs  bot_state.rs  bot_tokens.rs  bot_user.rs  channel.rs  channel_event.rs  channel_event_detail.rs  channel_list.rs  channel_path.rs  channel_stats.rs  channel_stats_stamp.rs  channel_stats_user.rs  channel_subscribe_level.rs  channel_topic.rs  channel_view_state.rs  channel_viewer.rs  child_created_event.rs  clip_folder.rs  clipped_message.rs  dm_channel.rs  external_provider_user.rs  file_info.rs  file_info_thumbnail.rs  forced_notification_changed_event.rs  get_bot_200_response.rs  get_client_200_response.rs  get_my_stamp_recommendations_200_response_inner.rs  get_notify_citation.rs  login_session.rs  message.rs  message_clip.rs  message_pin.rs  message_search_result.rs  (+107 more)
dev/caddy/: Caddyfile
dev/db/: init.sql
hooks/: useMessageSubscription.test.tsx  useMessageSubscription.ts
scripts/: create_oauth_client.ts
socket/components/: SocketProvider.tsx
socket/context/: socket.ts
socket/hooks/: useMessageSubscription.test.tsx  useMessageSubscription.ts  useSocket.ts
socket/lib/: parser.ts  types.ts
test/: MockSocketProvider.tsx  factories.ts  setup.ts  utils.tsx
timeline/components/: Message.test.tsx  Message.tsx  MessageAuthorAvatar.tsx  MessageAuthorAvater.tsx  MessageFooter.test.tsx  MessageFooter.tsx  MessageHeader.tsx  Timeline.test.tsx  Timeline.tsx
timeline/hooks/: useStampSearch.ts  useTimelineCache.ts  useTimelineInfinite.ts
