[workspace]
resolver = "3"
members = ["crates/app", "crates/domain", "crates/infra"]

[workspace.dependencies]
anyhow = "1.0.100"
axum = { version = "0.8.8", default-features = false, features = ["http1", "json", "tokio"] }
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.48.0", features = ["net", "rt-multi-thread"] }
utoipa = "5.4.0"
utoipa-axum = "0.2.0"
utoipa-swagger-ui = { version = "9.0.2", default-features = false, features = ["axum", "vendored"] }
