[workspace]
resolver = "3"
members = ["crates/*"]

[workspace.dependencies]
anyhow = "1.0.100"
async-trait = "0.1.89"
axum = { version = "0.8.8", default-features = false, features = ["http1", "json", "query", "tokio", "tracing"] }
axum-login = "0.18.0"
constant_time_eq = "0.4.2"
dotenvy = "0.15.7"
fastrand = "2.3.0"
http = "1.4.0"
oauth2 = "5.0.0"
reqwest = "0.12.28"
serde = { version = "1.0.228", features = ["derive"] }
sqlx = { version = "0.8.6", default-features = false, features = ["macros", "migrate", "mysql", "runtime-tokio", "time", "uuid"] }
thiserror = "2.0.17"
time = { version = "0.3.44", features = ["formatting", "parsing", "serde"] }
tokio = { version = "1.48.0", features = ["net", "rt-multi-thread"] }
tower-sessions = { version = "0.14.0", default-features = false, features = ["axum-core"] }
tower-sessions-sqlx-store = { version = "0.15.0", features = ["mysql"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
traq = "0.1.5"
utoipa = { version = "5.4.0", features = ["uuid", "time"] }
utoipa-axum = "0.2.0"
utoipa-swagger-ui = { version = "9.0.2", default-features = false, features = ["axum", "vendored"] }
uuid = { version = "1.19.0", features = ["serde"] }

# Test dependencies
mockall = "0.14.0"
httpmock = "0.8.2"
tower = "0.5.3"
fake = "=3.1.0"
rand = "0.8.5"

[patch.crates-io]
traq = { git = "https://github.com/akimon658/rust-traq.git", branch = "patch/stamp-recommend-and-delete-webhook-messages" }
