[workspace]
resolver = "3"
members = ["crates/*"]

[workspace.dependencies]
async-trait = "0.1.89"
axum = { version = "0.8.8", default-features = false, features = ["http1", "json", "query", "tokio", "tracing"] }
axum-login = "0.18.0"
constant_time_eq = "0.4.2"
dotenvy = "0.15.7"
fake = { version = "4.4.0", default-features = false }
fastrand = "2.3.0"
http = "1.4.0"
mockall = "0.14.0"
oauth2 = "5.0.0"
reqwest = "0.12.28"
rust_socketio = "0.6.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
socketioxide = "0.18.0"
sqlx = { version = "0.8.6", default-features = false, features = ["macros", "migrate", "mysql", "runtime-tokio", "time", "uuid"] }
testcontainers = { version = "0.26.3", default-features = false }
thiserror = "2.0.17"
time = { version = "0.3.44", features = ["formatting", "parsing", "serde"] }
tokio = { version = "1.48.0", features = ["net", "rt-multi-thread"] }
tower = "0.5.3"
tower-sessions = { version = "0.14.0", default-features = false, features = ["axum-core"] }
tower-sessions-sqlx-store = { version = "0.15.0", features = ["mysql"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
traq = "0.1.5"
url = "2.5.8"
utoipa = { version = "5.4.0", features = ["uuid", "time"] }
utoipa-axum = "0.2.0"
utoipa-swagger-ui = { version = "9.0.2", default-features = false, features = ["axum", "vendored"] }
uuid = { version = "1.19.0", features = ["serde"] }

[workspace.lints.clippy]
absolute_paths = "warn"

[patch.crates-io]
traq = { git = "https://github.com/akimon658/rust-traq.git", branch = "patch/stamp-recommend-and-delete-webhook-messages" }
