[package]
name = "app"
version = "0.1.0"
edition = "2024"
default-run = "app"

[dependencies]
anyhow = { workspace = true }
axum = { workspace = true }
axum-login = { workspace = true }
domain = { path = "../domain" }
dotenv = { workspace = true }
http = { workspace = true }
oauth2 = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tower-sessions = { workspace = true }
traq = { path = "../traq" }
utoipa = { workspace = true }
utoipa-axum = { workspace = true }
utoipa-swagger-ui = { workspace = true }
uuid = { workspace = true }
