[package]
name = "app"
version = "0.1.0"
edition = "2024"
default-run = "app"

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
axum = { workspace = true }
axum-login = { workspace = true }
constant_time_eq = { workspace = true }
domain = { path = "../domain" }
dotenvy = { workspace = true }
http = { workspace = true }
infra = { path = "../infra" }
oauth2 = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
sqlx = { workspace = true }
thiserror = { workspace = true }
time = { workspace = true }
tokio = { workspace = true }
tower-sessions = { workspace = true, features = ["memory-store"] }
tower-sessions-sqlx-store = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
traq = { workspace = true }
utoipa = { workspace = true }
utoipa-axum = { workspace = true }
utoipa-swagger-ui = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
httpmock = { workspace = true }
mockall = "0.14.0"
tower = { workspace = true }
