[package]
name = "app"
version = "0.1.0"
edition = "2024"
default-run = "app"

[dependencies]
async-trait = { workspace = true }
axum = { workspace = true }
axum-login = { workspace = true }
constant_time_eq = { workspace = true }
domain = { path = "../domain" }
dotenvy = { workspace = true }
http = { workspace = true }
infra = { path = "../infra" }
oauth2 = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
socketioxide = { workspace = true }
sqlx = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tower-sessions = { workspace = true }
tower-sessions-sqlx-store = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
traq = { workspace = true }
utoipa = { workspace = true }
utoipa-axum = { workspace = true }
utoipa-swagger-ui = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
# domain exports mock models with the "test-utils" feature
domain = { path = "../domain", features = ["test-utils"] }
fake = { workspace = true, features = ["uuid"] }
mockall = { workspace = true }
rust_socketio = { workspace = true }
serde_json = { workspace = true }
tower = { workspace = true }
tower-sessions = { workspace = true, features = ["memory-store"] }

[lints]
workspace = true
