[package]
name = "domain"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
mockall = { workspace = true, optional = true }
serde = { workspace = true }
time = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
traq = { workspace = true }
utoipa = { workspace = true }
uuid = { workspace = true, features = ["v7"] }

[dev-dependencies]
mockall = { workspace = true }
tokio = { workspace = true, features = ["macros"] }

[features]
test-utils = ["dep:mockall"]
