[package]
name = "domain"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = { workspace = true }
fake = { workspace = true, optional = true, features = ["time", "uuid"] }
http = { workspace = true }
lindera = { workspace = true, features = ["embed-ipadic"] }
mockall = { workspace = true, optional = true }
serde = { workspace = true }
strum = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }
time = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
traq = { workspace = true }
utoipa = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
fake = { workspace = true, features = ["time", "uuid"] }
mockall = { workspace = true }
time = { workspace = true }
tokio = { workspace = true, features = ["macros"] }

[features]
test-utils = ["dep:mockall", "dep:fake"]

[lints]
workspace = true
