[package]
name = "infra"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
domain = { path = "../domain" }
fastrand = { workspace = true }
sqlx = { workspace = true }
time = { workspace = true }
tokio = { workspace = true, features = ["macros"] }
traq = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
scopeguard = "1.2.0"
testcontainers = { workspace = true, features = ["docker-compose"] }
